internal/lang/test/testdata/errors/return_type_mismatch.scampi
module main

func greet(name: string) int {
  return "hello " + name
}
